<resources>
    <string name="app_name">Practice Code</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="splash_title">Practice Code</string>
    <string name="bloglink">https://programercreek.blogspot.in</string>
    <string name="mobile_banner_id">ca-app-pub-2597451345754102~2851301278</string>
    <string name="banner_ad_wiki_unit_id">ca-app-pub-2597451345754102/4328034476</string>
    <string name="banner_ad_progress_bar_unit_id">ca-app-pub-2597451345754102/1874095677</string>
    <string name="interstital_wiki_ad_id">ca-app-pub-2597451345754102/2792425678</string>
    <string name="hint_rewarded_interstital_ad">ca-app-pub-2597451345754102/4234278471</string>
    <string name="chapter_syntax_unlock_ad_unit">ca-app-pub-2597451345754102/9099640070</string>
    <string name="ad_mob_id">ca-app-pub-2597451345754102~2851301278</string>
    <string name="facebook_app_id">341877366183342</string>
    <string name="revise_programs">Revise</string>
    <string name="memorize_programs">Memorize</string>
    <string name="wizard">Wizard</string>
    <string name="test_yourself">Test</string>
    <string name="program_index">Index</string>
    <string name="action_settings">Settings</string>
    <string name="action_quiz">Quiz</string>
    <string name="about">About</string>
    <string name="match">Match</string>
    <string name="tell_your_friends">Promote</string>
    <string name="download_new_programs">Download</string>
    <string name="share_with_friends">Share</string>
    <string name="title_activity_list">Program List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dummy">Programs List</string>
    <string name="title_activity_program">Program</string>
    <string name="description">Flip</string>
    <string name="hintBtn">Hint</string>
    <string name="menu">Menu</string>
    <string name="showAllBtn">Show All / Hide All</string>
    <string name="check">Check</string>
    <string name="nextProgram"></string>
    <string name="prevProgram"></string>
    <string name="title_activity_splach_screen">SplashScreen</string>
    <string name="outputTxt">Expected Output :</string>
    <string name="checkMatch">Check</string>
    <string name="viewProfile">View Profile</string>
    <string name="about_string">
        An attempt to make testing your programming and memorizing skills fun.\n\nImprovement is constant, communicate your feedback, application bugs to : \nprogrammer.creek@gmail.com\n\nHow to :\n\nIntroduction : You can go through introduction in the Introduction section\n\nProgram Wiki : A brief on programs\n\nLearn Syntax : Go through and practice program syntax\n\nIndex : Complete all tests with revision in one go\n\nTest : Drag and drop the program into proper sequence as per the given program order.\nDifficulty : High\n\nQuiz : Take quiz with two modes of questions.\nDifficulty : Low\n\nMatch : Match program lines with their description. - Drag and drop, select program line and click on description to place it.\nDifficulty : Medium</string>
    <string name="title_activity_test_drag_n_drop">Test Yourself</string>
    <string name="title_activity_revise_program">Revise Program</string>
    <string name="title_activity_match_maker">Match the Following</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_program_fragment_list">ProgramFragmentListActivity</string>
    <string name="title_activity_about">About</string>
    <string name="title_refresh_database">Refresh Database</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_wizard">Learning Wizard</string>
    <string name="title_activity_full_screen_wizard">Learning Wizard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="index_description">Browse through program index, your learning starts here</string>
    <string name="wizard_description">Become a pro through learning wizard</string>
    <string name="revise_description">Revise line by line or in full program mode</string>
    <string name="match_description">Match code with their meaning, race against time</string>
    <string name="quiz_description">Take quiz to test your understanding</string>
    <string name="test_description">Test your programming skills by arranging code in right order</string>
    <string name="invite">Invite</string>
    <string name="fill_the_missing_code">Fill the missing code :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="program_description">Program description</string>
    <string name="option">Option</string>
    <string name="fill_the_code">Fill in the code</string>
    <string name="fill_description">Fill the missing code, work on multiple blanks</string>
    <string name="program_fill_blanks"><![CDATA[1. #include <.......>\n2. void ....()\n3. ......(\'\'Hello world\'\');]]></string>
    <string name="title_fill_the_blanks">Fill the code :</string>
    <string name="done">Done</string>
    <string name="time">00:00</string>
    <string name="url">Program explanation</string>
    <string name="title_program_wiki">Program Wiki</string>
    <string name="program_wiki">Program Wiki</string>
    <string name="program_wiki_description">Go through all the progams and explanations</string>
    <string name="select_language">Selected :</string>
    <string name="title_activity_syntax_learn">Learn Syntax</string>
    <string name="printf_statement">Example : printf(\"Hello world\");</string>
    <string name="printf_solution">printf(\"Practice Code\");</string>
    <string name="option_infinite_programmer">\"Practice Code\"</string>
    <string name="options">Options</string>
    <string name="learn_syntax_description">Learn/ Practice syntax for the program functions</string>
    <string name="module">Module</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.sortedqueue.programmercreek</string>
    <string name="sync_with_server">Sync with Server</string>
    <string name="c_description">C is a high-level and general purpose programming language that is ideal for developing firmware or portable applications.</string>
    <string name="cpp_description">C++ is a general-purpose, statically typed, free-form, multi-paradigm programming language supporting procedural programming, data abstraction, and generic programming.</string>
    <string name="java_description">Java is a general-purpose computer programming language that is concurrent, class-based, object-oriented, and specifically designed to have as few implementation dependencies as possible.</string>
    <string name="unable_to_fetch_data">Unable to fetch data</string>
    <string name="congratulations">Congratulations, You\'ve got it right</string>
    <string name="proceed">Proceed</string>
    <string name="chapter_locked">This chapter is currently locked, Complete the previous chapter to unlock this.</string>
    <string name="module_locked">This module is currently locked, Complete the previous module to unlock this.</string>
    <string name="program_locked">This program is currently locked, Complete the previous programs to unlock this.</string>
    <string name="new_module_unlocked">You have completed the module</string>
    <string name="new_chapter_unlocked">You have completed the chapter</string>
    <string name="program_inserter">Program Inserter</string>
    <string name="wiki_header">Wiki Header</string>
    <string name="wiki_id">Wiki Id</string>
    <string name="syntax_language">Syntax Language</string>
    <string name="save_button">Save</string>
    <string name="insert_button">Insert</string>
    <string name="delete">Delete</string>
    <string name="program_wiki_header">Program Wiki header</string>
    <string name="explanation">Explanation</string>
    <string name="cancel">Cancel</string>
    <string name="example">Example</string>
    <string name="clear">Clear</string>
    <string name="intro">Introduction</string>
    <string name="intro_description">A brief introduction about the programming language</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world_program"><![CDATA[#include <stdio.h> int main() {     printf( \"I am alive!  Beware.\\n\" );     getchar();     return 0; }]]></string>
    <string name="basics_with_hello_world">Basics</string>
    <string name="comments">Extras</string>
    <string name="installation">Installation</string>
    <string name="chapters">Chapters</string>
    <string name="search">Search [Syntax]DB</string>
    <string name="sign_in">Login / Signup : Email</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="re_hint_password">Reenter Password</string>
    <string name="choose_language">You\'ll need to choose a language to learn</string>
    <string name="got_it">Got It</string>
    <string name="unlock_programs">Unlock Programs</string>
    <string name="unlock_programs_description">Unlocking individual programs requires you to complete all tests related to a program : Quiz, Match and Test</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="logout">Log out</string>
    <string name="unable_to_find_app_for_email">Unable to find any app to send Email</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email">programmer.creek@gmail.com</string>
    <string name="great">Great</string>
    <string name="divide_and_conquer">Divide and Conquer</string>
    <string name="divide_and_conquer_description">Divide and Conquer enables you to split a long program into chunks and complete the test</string>
    <string name="internet_unavailable">Internet unavailable, Click retry once you have net connectivity</string>
    <string name="retry">Retry</string>
    <string name="action_terms_and_conditions">Terms and Conditions</string>
    <string name="rate_us">Rate Us</string>
    <string name="top_learners_heading">Top Learners</string>
    <string name="code">Code</string>
    <string name="preview">Preview</string>
    <string name="header">Header</string>
    <string name="content">Content</string>
    <string name="legend">Legend :</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_programs">My Programs</string>
</resources>