<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/action_about"
          android:title="@string/title_activity_about"
          app:showAsAction="never"/>
    <item android:id="@+id/action_invite"
        android:title="@string/invite"
        app:showAsAction="never"/>
    <item android:id="@+id/action_share"
        android:title="@string/share_with_friends"
        app:showAsAction="never"/>
    <item android:id="@+id/action_feedback"
        android:title="@string/feedback"
        app:showAsAction="never"/>
    <item android:id="@+id/action_rate"
        android:title="@string/rate_us"
        app:showAsAction="never"/>
    <item android:id="@+id/action_log_out"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item android:id="@+id/action_sync"
        android:title="@string/sync_with_server"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <!--<item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"/>-->
    <!-- <item android:id="@+id/action_refresh_database"
          android:icon="@drawable/refresh32"
          android:title="@string/title_refresh_database"
          android:showAsAction="ifRoom"/> -->
   
</menu>