<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/intro_item"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/intro" />
        <item
            android:id="@+id/basics_item"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/basics_with_hello_world" />
        <item
            android:id="@+id/comments_item"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/comments" />
        <item
            android:id="@+id/installation_item"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/installation" />
        <item
            android:id="@+id/chapters_item"
            android:icon="@android:drawable/ic_media_ff"
            android:title="@string/chapters" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
