<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/legendLayout"
        android:background="@color/md_grey_100"
        android:padding="@dimen/margin_4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legend"
            android:padding="@dimen/margin_6"
            android:textColor="@color/md_black_1000"
            android:layout_margin="@dimen/margin_4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:padding="@dimen/margin_6"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_4"
            android:background="@drawable/button_header"
            android:id="@+id/headerTextView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:padding="@dimen/margin_6"
            android:textColor="@color/md_black_1000"
            android:layout_margin="@dimen/margin_4"
            android:background="@drawable/button_content"
            android:id="@+id/contentTextView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:padding="@dimen/margin_6"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_4"
            android:background="@drawable/button_code"
            android:id="@+id/codeTextView"
            />
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/languageRecyclerView"
        android:layout_below="@+id/legendLayout"
        android:background="@color/md_grey_300"
        >
    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/languageRecyclerView"
        android:layout_above="@+id/buttonLayout"
        android:id="@+id/notesRecyclerView">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:padding="@dimen/margin_8"
        android:layout_width="match_parent"
        android:id="@+id/buttonLayout"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/text_dashboard_small"
            android:textColor="@color/white"
            android:background="@drawable/button_check"
            android:layout_margin="@dimen/margin_4"
            android:id="@+id/previewButton"
            android:text="@string/preview"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/text_dashboard_small"
            android:textColor="@color/white"
            android:background="@drawable/button_check"
            android:id="@+id/saveButton"
            android:layout_margin="@dimen/margin_4"
            android:text="@string/save_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/text_dashboard_small"
            android:textColor="@color/white"
            android:background="@drawable/button_check"
            android:id="@+id/discardButton"
            android:layout_margin="@dimen/margin_4"
            android:text="@string/cancel"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"
        android:layout_above="@+id/buttonLayout"
        android:id="@+id/container"/>

</RelativeLayout>