<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        
        android:id="@+id/wikiHeaderTextView"
        android:textColor="@color/md_black_1000"
        android:hint="@string/program_wiki_header"
        android:padding="@dimen/margin_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="@color/bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:enabled="false"
        android:id="@+id/wikiExplanationTextView"
        android:textColor="@color/md_black_1000"
        android:gravity="top"
        android:hint="@string/explanation"
        android:padding="@dimen/margin_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="@color/bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:enabled="false"
        android:id="@+id/wikiExampleTextView"
        android:textColor="@color/md_black_1000"
        android:gravity="top"
        android:hint="@string/example"
        android:padding="@dimen/margin_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="@color/bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_black_1000"
        android:id="@+id/wikiOuptputTextView"
        android:textColor="@color/white"
        android:enabled="false"
        android:gravity="top"
        android:textColorHint="@color/bg"
        android:hint="@string/outputTxt"
        android:padding="@dimen/margin_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="@color/bg" />

</LinearLayout>