<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/wikiHeaderEditText"
            android:textColor="@color/md_black_1000"
            android:hint="@string/wiki_header"
            android:padding="@dimen/margin_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:background="@color/bg" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/wikiIdEditText"
            android:textColor="@color/md_black_1000"
            android:hint="@string/wiki_id"
            android:padding="@dimen/margin_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:background="@color/bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/syntaxLanguageTextView"
            android:textColor="@color/md_black_1000"
            android:hint="@string/syntax_language"
            android:padding="@dimen/margin_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:background="@color/bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/insertButton"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sky"
                android:layout_margin="@dimen/margin_8"
                android:text="@string/insert_button"
                />
            <Button
                android:id="@+id/deleteButton"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sky"
                android:layout_margin="@dimen/margin_8"
                android:text="@string/delete"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:listItem="@layout/item_wiki_inserter"
            android:id="@+id/programWikiRecyclerView"
            android:background="@color/white">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/saveButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_sky"
            android:layout_margin="@dimen/margin_8"
            android:text="@string/save_button"
            />

    </LinearLayout>
<!--</ScrollView>-->

